# brainiac

./: .env.deploy.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  context-map.json  docker-compose.deploy.yml  docker-compose.yml  openapi.json
.claude/: CLAUDE.md
.claude/skills/perfect/: skill.md
.claude/skills/prototype/: SKILL.md
.claude/skills/uat/: skill.md
.github/workflows/: ci.yml
console/: .gitignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
console/app/: chrome.tsx  globals.css  layout.tsx  page.tsx
console/app/analytics/: ObservatoryLab.tsx  observatory-data.ts  page.tsx
console/app/console/: ModuleBoundary.tsx  layout.tsx  page.tsx
console/app/demo/: DemoConsole.tsx  DemoReviews.tsx  DemoStandards.tsx  ModuleIntro.tsx  ReviewGate.tsx  layout.tsx  (+5 more)
crates/brainiac-core/: Cargo.toml
crates/brainiac-core/src/: embed.rs  fusion.rs  health.rs  lib.rs  library.rs  metrics.rs  redact.rs  rerank.rs  scoring.rs  temporal.rs  types.rs
crates/brainiac-eval/: Cargo.toml
crates/brainiac-eval/src/: contradiction_profile.rs  docs_profile.rs  drift_profile.rs  extraction_profile.rs  gates.rs  grid.rs  lib.rs  pipeline_profile.rs  report.rs  resolution_profile.rs  retrieval_profile.rs  seed.rs
crates/brainiac-eval/tests/: contradiction_pg.rs  grid_pg.rs  pipeline_pg.rs  resolution_pg.rs  retrieval_pg.rs
crates/brainiac-fixtures/: Cargo.toml
crates/brainiac-fixtures/src/: export.rs  ids.rs  lib.rs  loader.rs  schema.rs  validate.rs
crates/brainiac-fixtures/tests/: load_v1.rs
crates/brainiac-gateway/: Cargo.toml
crates/brainiac-gateway/src/: lib.rs  resilience.rs
crates/brainiac-pipeline/: Cargo.toml
crates/brainiac-pipeline/src/: compose.rs  contradict.rs  divergence.rs  extract.rs  faithfulness.rs  lib.rs  library_sweep.rs  manual.rs  okf_ingest.rs  policy.rs  reembed.rs  resolve.rs  standards_page.rs  worker.rs
crates/brainiac-pipeline/tests/: compose_pg.rs  library_sweep_pg.rs  pipeline_pg.rs  reembed_pg.rs  standards_page_pg.rs
crates/brainiac-publish/: Cargo.toml
crates/brainiac-publish/src/: confluence.rs  git.rs  lib.rs  okf.rs  pointer.rs  render.rs
crates/brainiac-server/: Cargo.toml
crates/brainiac-server/src/: alerts.rs  auth.rs  console.rs  docs.rs  http.rs  lib.rs  library.rs  main.rs  mcp.rs  onboard.rs  openapi.rs  projects.rs  provision.rs  sweeps.rs
crates/brainiac-server/tests/: console_pg.rs  contradictions_pg.rs  doc_edit_pg.rs  docs_pg.rs  feedback_pg.rs  feedback_queue_pg.rs  http_smoke.rs  library_pg.rs  mcp_pg.rs  onboard_pg.rs  promotions_pg.rs  publish_pg.rs
crates/brainiac-store/: Cargo.toml
crates/brainiac-store/src/: archive.rs  documents.rs  entities.rs  feedback.rs  governance.rs  identities.rs  lib.rs  memories.rs  onboard.rs  orgs.rs  projects.rs  publishing.rs  queue.rs  retrieval.rs  test_support.rs  tokens.rs
crates/brainiac-store/tests/: archive_pg.rs  docs_browse_pg.rs  store_pg.rs
docs/: ARCHITECTURE.md  BANK-CORPUS.md  EVAL.md  KB-PLAN.md  KNOWLEDGE-BASE.md  LIBRARY-PLAN.md  ONBOARDING-QUICK-ACTION.md  PLAN.md  PROJECT-PLAN.md  VISIBILITY-TIERS.md
docs/deploy/: alibaba.md
docs/harness/: harness-learnings.md
docs/research/: embeddings.md
fixtures/bank/: README.md  org.yaml
fixtures/schema/: README.md  contradictions.schema.json  documents.schema.json  drift.schema.json  entities.schema.json  leak.schema.json  memories.schema.json  merges.schema.json  org.schema.json  qa.schema.json  temporal.schema.json  transcript.schema.json
fixtures/v1/: org.yaml
fixtures/v2/: org.yaml
load/: README.md
load/chainsonar/: .adopted.json  .final.json  .gitignore  .s1.json  .seed-mem.sql  .slugmap.txt  .srch.json  .stds.json  README-run.md  bx.mjs  report.mjs  scan.md  setup.mjs
migrations/: 0001_init.sql  0002_worker_read.sql  0003_api_tokens.sql  0004_memory_feedback.sql  0005_feedback_resolution.sql  0006_hnsw_ann_index.sql  0007_language_aware_fts.sql  0008_canonical_embeddings.sql  0009_canonical_aliases.sql  0010_pipeline_run_stats.sql  0012_dim_agnostic_hnsw.sql  0013_source_idempotency.sql  0014_knowledge_health_snapshots.sql  0015_memory_facets.sql  0016_practice_divergences.sql  0017_document_layer.sql  0018_sweep_schedules.sql  0019_document_delete_policy.sql  0020_kb_publishing.sql  0021_compose_backoff.sql  0022_identities.sql  0023_memory_title.sql  0024_raw_ttl_sweep.sql  0025_document_reads.sql  0025_feedback_resolution_note.sql  0027_digest_kind.sql  0028_library_substrate.sql  0029_library_mining.sql  0030_library_proposals.sql  0031_standards_pages.sql  0032_skill_proposals.sql  0033_list_indexes.sql  0034_projects_onboarding.sql  0035_project_stamping.sql  0036_revision_faithfulness.sql  0037_divergence_axis.sql  0038_document_project.sql  0039_project_path_prefix.sql  0040_project_isolation.sql  README.md
results/: baseline.json  contradiction-baseline.json  docs-baseline.json  drift-baseline.json  extraction-baseline.json  kb0-extraction.json  kb1-docs.json  pipeline-baseline.json  resolution-baseline.json
results/history/: 2026-07-10-retrieval-deterministic-baseline.json  2026-07-10-retrieval-deterministic-expanded.json  2026-07-10-retrieval-qwen-text-embedding-v4.json  2026-07-15-drift-qwen-text-embedding-v4.json
tools/: bank-org.mjs  gen-bank-corpus.mjs  seed-bank-docs.mjs
uat/: .gitignore  README.md  accepted-gaps.md  baseline.md  company.md  decoys.md  env.md  rubric.md
uat/characters/: 01-ada-kovac.md  02-petra-novak.md  03-tomas-reid.md  04-ingrid-sol.md  05-jonas-weber.md  06-mira-haddad.md  07-sam-oduya.md  08-rafael-ortiz.md  09-dana-brecht.md  10-yusuf-kaya.md  11-lars-bengtsson.md  12-nadia-roth.md
uat/driver/: arm.md  mcp_call.sh  seed.sh
uat/journeys/: checkout-timeout-drift.md  contractor-webhook-scope.md  decline-05-triage.md  ledger-payout-recon.md  refund-burst-features.md  refund-cap-tuning.md  std-retry-reversal.md  v1-fallback-still-true.md
uat/relays/: new-joiner-inherits-p2.md  promotion-queue-backlog.md  retry-reversal-propagation.md
(+350 files in other folders)
