[package]
name = "brainiac-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
brainiac-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }

[lints]
workspace = true
