[package]
name = "brainiac-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
brainiac-core = { path = "../brainiac-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
