[package]
name = "brainiac-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
brainiac-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
