[package]
name = "brainiac-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
brainiac-core = { workspace = true }
brainiac-store = { workspace = true }
brainiac-gateway = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
brainiac-fixtures = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
