[package]
name = "brainiac-publish"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brainiac-core.workspace = true
brainiac-store.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
